# study-buddy

backend/: pyproject.toml
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: base.py  db.py  models.py
backend/src/routes/: quote.py  timer.py  webhooks.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/auth/: AuthenticationPage.tsx  ClerkProviderWithRoutes.tsx
frontend/src/layout/: Layout.tsx
frontend/src/quote-history/: QuoteHistory.tsx
frontend/src/quotes/: MotivationalQuote.tsx  MotivationalQuoteGenerator.tsx
frontend/src/statistics/: Statistics.tsx
frontend/src/subjects/: MySubjects.tsx
frontend/src/timer/: Timer.tsx
frontend/src/utils/: api.ts
